--- a/finespecdetailing/styles/Home.module.css
+++ b/finespecdetailing/styles/Home.module.css
@@ -1,9 +1,11 @@
 .container {
   padding: 0 2rem;
+  background: black;
 }
 
 .comingSoon {
   font-size: 1.5rem;
+  color: blue;
 }
 
 .main {
@@ -33,7 +35,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: silver;
   text-decoration: none;
 }
 
@@ -61,7 +63,7 @@
 }
 
 .code {
-  background: #fafafa;
+  background: blue;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
@@ -92,7 +94,7 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
+  color: blue;
   border-color: #0070f3;
 }
 
