--- a/finespecdetailing/Styles/index.module.css
+++ b/finespecdetailing/Styles/index.module.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Cinzel&display=swap');
+
+.Font {
+  font-family: 'Cinzel', serif;
+}
+
 @media screen and (max-width: 768px) {
   .video {
       display: none;
