--- a/finespecdetailing/Styles/Services.module.css
+++ b/finespecdetailing/Styles/Services.module.css
@@ -3,7 +3,7 @@
         background: none;
     }
     .firstContainer {
-        background-image: "url(/porche2.png)";
+        background-image: "url(/porche.png)";
         background-position: "bottom";
         background-attachment: "fixed";
         background-repeat: "no-repeat";
