--- a/finespecdetailing/Styles/Services.module.css
+++ b/finespecdetailing/Styles/Services.module.css
@@ -3,7 +3,7 @@
         background: none;
     }
     .firstContainer {
-        background-image: "url(/porche.png)";
+        background-image: url('/porche.png'    );
         background-position: "bottom";
         background-attachment: "fixed";
         background-repeat: "no-repeat";
@@ -11,7 +11,7 @@
         z-index: "0";
     }
     .secondContainer {
-        background-image: "url(/porche2.png)";
+        background-image: url('/porche2.png');
         background-position: "bottom";
         background-attachment: "fixed";
         background-repeat: "no-repeat";
@@ -21,11 +21,20 @@
 }
 
 @media screen and (max-width: 768px) {
-    .background {
-        background: url('/soap.png');
-        background-position: top;
+    .background::after {
+        content: "";
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+        background: url(/soap.png) no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
         background-size: cover;
-        background-attachment: fixed;
     }
     .firstContainer {
         background: none;
