--- a/finespecdetailing/Styles/Services.module.css
+++ b/finespecdetailing/Styles/Services.module.css
@@ -3,20 +3,20 @@
         background: none;
     }
     .firstContainer {
-        background-image: url('/porche.png'    );
-        background-position: "bottom";
-        background-attachment: "fixed";
-        background-repeat: "no-repeat";
-        background-size: "contain";
-        z-index: "0";
+        background-image: url(/porche.png);
+        background-position: bottom;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: contain;
+        z-index: 0;
     }
     .secondContainer {
-        background-image: url('/porche2.png');
-        background-position: "bottom";
-        background-attachment: "fixed";
-        background-repeat: "no-repeat";
-        background-size: "contain";
-        z-index: "0";
+        background-image: url(/porche2.png);
+        background-position: bottom;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: contain;
+        z-index: 0;
     }
 }
 
