--- a/finespecdetailing/Styles/Services.module.css
+++ b/finespecdetailing/Styles/Services.module.css
@@ -27,8 +27,8 @@
         position: fixed;
         left: 0;
         top: 0;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         z-index: -10;
         background: url(/soap.png) no-repeat center center;
         -webkit-background-size: cover;
