--- a/finespecdetailing/Styles/Services.module.css
+++ b/finespecdetailing/Styles/Services.module.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 768px) {
     .background {
-        background: url(/soap.png);
+        background: url(https://finespecdetailing.b-cdn.net/soap.png);
         background-position: center;
         background-size: cover;
         margin-top: 40px;
@@ -37,7 +37,7 @@
         width: 100vw;
         height: 100vh;
         z-index: -10;
-        background: url(/soap.png) no-repeat center center;
+        background: url(https://finespecdetailing.b-cdn.net/soap.png) no-repeat center center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
