--- a/finespecdetailing/Styles/Footer.module.css
+++ b/finespecdetailing/Styles/Footer.module.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Cinzel&display=swap");
 .Grid {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: "Cinzel", serif;
 }
