--- a/finespecdetailing/Styles/Services.module.css
+++ b/finespecdetailing/Styles/Services.module.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Cinzel&display=swap");
+
+.Font {
+  font-family: "Cinzel", serif;
+}
+
 @media screen and (min-width: 768px) {
     .background {
         background: url(https://finespecdetailing.b-cdn.net/soap.png);
