--- a/finespecdetailing/Styles/Services.module.css
+++ b/finespecdetailing/Styles/Services.module.css
@@ -6,7 +6,8 @@
 
 @media screen and (min-width: 768px) {
     .background {
-        background: url(https://finespecdetailing.b-cdn.net/soap.png);
+        /*
+        background: url(https://finespecdetailing.b-cdn.net/soap.png); */
         background-position: center;
         background-size: cover;
         margin-top: 40px;
@@ -43,7 +44,7 @@
         width: 100vw;
         height: 100vh;
         z-index: -10;
-        background: url(https://finespecdetailing.b-cdn.net/soap.png) no-repeat center center;
+        /* background: url(https://finespecdetailing.b-cdn.net/soap.png) no-repeat center center; */
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
