--- a/finespecdetailing/Styles/index.module.css
+++ b/finespecdetailing/Styles/index.module.css
@@ -7,7 +7,7 @@
   .Container {
     width: 100%;
     height: 100vh;
-    background: url(https://finespecdetailing.b-cdn.net/showroom.png);
+    /*background: url(https://finespecdetailing.b-cdn.net/showroom.png);*/
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -23,7 +23,7 @@
     width: 100vw;
     height: 100vh;
     background-position: bottom;
-    background: url(https://finespecdetailing.b-cdn.net/porche3.png);
+    /*background: url(https://finespecdetailing.b-cdn.net/porche3.png);*/
     background-size: cover;
   }
 }
