--- a/finespecdetailing/Styles/Footer.module.css
+++ b/finespecdetailing/Styles/Footer.module.css
@@ -4,4 +4,23 @@
     justify-content: center;
     align-items: center;
     font-family: "Cinzel", serif;
+    width: 80vw;
+}
+
+.Footer {
+    position: static;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
+
+.FooterDiv {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
 }
