--- a/finespecdetailing/Styles/index.module.css
+++ b/finespecdetailing/Styles/index.module.css
@@ -1,33 +1,75 @@
-@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Cinzel&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap");
 
-.Font {
-  font-family: "Cinzel", serif;
-}
 @media screen and (min-width: 768px) {
+  .Font {
+    font-family: "Cinzel", serif;
+    font-weight: 700;
+    font-size: 3.5rem;
+    text-shadow: 20px 20px 20px black;
+  }
+  .SubHead {
+    font-family: "Cinzel", serif;
+    font-weight: 700;
+    font-size: 2.5rem;
+    text-shadow: 20px 20px 20px white;
+  }
+  .Book {
+    font-family: "Cinzel", serif;
+    font-weight: 700;
+    font-size: 1.5rem;
+  }
   .Container {
     width: 100%;
-    height: 100vh;
-    background: url('/clean.png');
-    background-size: contain;
-    background-repeat: no-repeat;
+    height: 80vh;
+  }
+  .car {
+    background: url("/mercedes.png");
+    background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+  }
+  .video {
+    /* display: none; */
+    padding-top: 100px;
+    width: 100vw;
+  }
+  .VideoStyle {
+    width: 100vw;
   }
 }
 
-
 @media screen and (max-width: 768px) {
+  .Font {
+    font-family: "Cinzel", serif;
+    font-weight: 700;
+    font-size: 1.5rem;
+    text-shadow: 10px 10px 10px black;
+  }
+  .SubHead {
+    font-family: "Cinzel", serif;
+    font-weight: 700;
+    font-size: 1.5rem;
+    text-shadow: 10px 10px 10px white;
+  }
+  .Book {
+    font-family: "Cinzel", serif;
+    font-weight: 700;
+    font-size: 1rem;
+  }
   .video {
-    display: none;
+    /* display: none; */
+    padding-top: 100px;
+    overflow: hidden;
+    
   }
   .Container {
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
     background-position: center;
-    background: url(/clean.png);
-    background-size: contain;
-    background-repeat-y: repeat;
-    background-position-y: center;
-    background-position-x: center;
+    background: url(/mercedes.png);
+    background-size: cover;
+    /* background-repeat-y: repeat; */
+    /* background-position-y: right; */
+    /* background-position-x: left; */
   }
 }
-
