--- a/finespecdetailing/Styles/Contact.module.css
+++ b/finespecdetailing/Styles/Contact.module.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Cinzel&display=swap");
 .Container {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 }
 
 
 .Font {
   font-family: "Cinzel", serif;
+  font-size: 3.5rem;
 }
